--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@studio-freight/lenis": "^1.0.42",
     "@tailwindcss/vite": "^4.1.17",
+    "lenis": "^1.3.15",
     "lucide-react": "^0.555.0",
     "motion": "^12.23.24",
     "react": "^19.2.0",
